Fixed unaligned footer items on mobile breakpoint

--- a/style/about.css
+++ b/style/about.css
@@ -64,20 +64,6 @@ p{
     color: transparent;
 }
 
-.card {
-   text-align: center;
-
-    /* Add shadows to create the "card" effect */
-  
-  }
-  
-  /* On mouse-over, add a deeper shadow */
-
-  
-  /* Add some padding inside the card container */
-  .container {
-    padding: 2px 16px;
-  }
 
 
 .about-footer{
